# KMAT

./: .gitattributes  .gitignore  jsconfig.json  manage.py  mypy.ini  pyproject.toml
kmat/: __init__.py  constants.py  helper.py  models.py  plugins.py
kmat/models/: __init__.py  submission.py  user.py
kmat/routes/: base.py  judge.py  results.py  submission.py  user.py
kmat/static/: judging.js  style.css
kmat/templates/: 401.html  403.html  404.html  500.html  base.html  macros.html
kmat/templates/pages/: blank_index.html  index.html  information.html  staff.html  submit.html
kmat/templates/pages/judge/: listing.html
kmat/templates/pages/result/: listing.html
tests/: test_kmat.py
